--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.0.10",
+    "graphql-request": "^4.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
