--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "serve": "npm run build && vite preview --port 3000",
     "preview": "vite preview",
-    "test": "vitest",
+    "test:e2e": "start-server-and-test serve http://127.0.0.1:3000/ 'cypress open'",
+    "test:e2e:ci": "start-server-and-test serve http://127.0.0.1:3000/ 'cypress run'",
+    "test:unit": "vitest",
+    "test:unit:ci": "vitest run",
+    "test:unit:coverage": "vitest --coverage",
     "lint:fix": "eslint ./src --ext .jsx,.js,.ts,.tsx --quiet --fix --ignore-path ./.gitignore",
     "lint:format": "prettier  --loglevel warn --write \"./**/*.{js,jsx,ts,tsx,css,md,json}\" ",
     "lint": "npm run lint:format && npm run lint:fix",
@@ -21,6 +26,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@cypress/vite-dev-server": "^3.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.4.2",
@@ -30,8 +36,11 @@
     "@typescript-eslint/parser": "^5.32.0",
     "@vitejs/plugin-react": "^2.0.0",
     "autoprefixer": "^10.4.8",
+    "cssnano": "^5.1.12",
+    "cypress": "^10.4.0",
     "eslint": "^8.21.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-prettier": "^4.2.1",
@@ -41,6 +50,7 @@
     "lint-staged": "^13.0.3",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
+    "start-server-and-test": "^1.14.0",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.6.4",
     "vite": "^3.0.0",
