--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,6 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["src", "utils.ts"],
+  "include": ["src", "cypress", "cypress.config.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
