--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -2,12 +2,18 @@
 name: Build and Deploy to Netlify
 on:
   push:
-    branches: ['main']
+    branches: 
+      - main
 jobs:
   build:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      
+      - name: Setup Node
+        uses: actions/setup-node@v1
+        with:
+          node-version: '16.x'
 
       - name: Build
         run: npm run build
