refactor: Remove unecessary git add to lintstaged

--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -3,7 +3,6 @@
     "eslint"
   ],
   "**/*.+(js|jsx|ts|tsx|json|yml|yaml|css|less|scss|ts|tsx|md|graphql|mdx)": [
-    "prettier --write",
-    "git add"
+    "prettier --write"
   ]
 }
