--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "husky": "^8.0.1",
     "jsdom": "^20.0.0",
     "lint-staged": "^13.0.3",
+    "msw": "^0.44.2",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
     "start-server-and-test": "^1.14.0",
