--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -18,6 +18,9 @@ jobs:
       - name: Install
         run: npm ci
 
+      - name: Unit tests
+        run: npm run test:unit:ci
+
       - name: Build
         run: npm run build
 
