--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@typescript-eslint/parser": "^5.32.0",
     "@vitejs/plugin-react": "^2.0.0",
     "autoprefixer": "^10.4.8",
+    "c8": "^7.12.0",
     "cssnano": "^5.1.12",
     "cypress": "^10.4.0",
     "eslint": "^8.21.0",
@@ -48,6 +49,7 @@
     "husky": "^8.0.1",
     "jsdom": "^20.0.0",
     "lint-staged": "^13.0.3",
+    "msw": "^0.44.2",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
     "start-server-and-test": "^1.14.0",
